airline-integration-service/deploy/local/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: airline-integration-svc
  namespace: aerona
  labels: &DeploymentLabels
    app: aerona
    service: airline-integration-service
    tier: back-end
spec:
  selector: *DeploymentLabels
  type: ClusterIP
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airline-integration-service
  namespace: aerona
  labels: &DeploymentLabels
    app: aerona
    tier: back-end
    service: airline-integration-service
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 30
  revisionHistoryLimit: 10
  replicas: 2
  selector:
    matchLabels: *DeploymentLabels
  template:
    metadata:
      labels: *DeploymentLabels
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - aerona
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: airline-integration-service
          image: registry.gitlab.com/aerona/airline-integration-service:1.0.0
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
              ephemeral-storage: "1Gi"
            limits:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "2Gi"
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
      imagePullSecrets:
        - name: gitlab-registry-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airline-integration-ingress
  namespace: aerona
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "airline-integration.aerona.thanhtd.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airline-integration-svc
                port:
                  number: 8081
